--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ path = "src/main.rs"
 regex = "1.10"
 bimap = "0.6.3"
 once_cell = "1.17.1"
+clap = { version = "4.5", features = ["derive"] }
+anstream = "0.6"
+anstyle = "1.0"
+rand = "0.8"
