--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ clap = { version = "4.5", features = ["derive"] }
 anstream = "0.6"
 anstyle = "1.0"
 rand = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+rouille = "3.6"
