--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,7 @@ rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rouille = "3.6.2"
+pyo3 = "0.26.0"
+numpy = "0.26.0"
+ndarray = "0.16.1"
 
