--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ tracing-chrome = "0.7.2"
 tracing-subscriber = "0.3.20"
 rayon = "1.11.0"
 regex-syntax = "0.8.6"
+moka = { version = "0.12", features = ["sync"] }
 
 [dev-dependencies]
 proptest = "1"
