--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,9 +31,9 @@ name = "beam"
 path = "src/main.rs"
 
 [dependencies]
-regex = "1.10"
+regex = "1.10" # legacy should remove
 bimap = "0.6.3"
-once_cell = "1.17.1"
+
 clap = { version = "4.5", features = ["derive"] }
 anstream = "0.6"
 anstyle = "1.0"
@@ -42,12 +42,15 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rouille = "3.6.2"
 anyhow = "1.0.100"
-tracing-chrome = "0.7.2"
-tracing-subscriber = "0.3.20"
-rayon = "1.11.0"
+
 regex-syntax = "0.8.6"
+
+# parallelization
+rayon = "1.10"
+
+# cache
 moka = { version = "0.12", features = ["sync"] }
+once_cell = "1.17.1"
 
 [dev-dependencies]
 proptest = "1"
-
