--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,9 @@ exclude = [
 path = "src/mod.rs"
 
 [[bin]]
-name = "beam"
+name = "p7"
 path = "src/main.rs"
+
 
 [dependencies]
 regex = "1.10" # legacy should remove
@@ -51,6 +52,9 @@ rayon = "1.10"
 # cache
 moka = { version = "0.12", features = ["sync"] }
 once_cell = "1.17.1"
+
+# progress
+indicatif = "0.17"
 
 [dev-dependencies]
 proptest = "1"
