--- a/python/visualization/frontend/package.json
+++ b/python/visualization/frontend/package.json
@@ -9,17 +9,18 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
+    "ajv": "^6.12.6",
+    "axios": "^1.6.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "axios": "^1.6.0",
-    "@monaco-editor/react": "^4.6.0",
-    "react-split-pane": "^0.1.92",
     "react-json-view": "^1.21.3",
-    "styled-components": "^6.1.1",
+    "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
-    "prismjs": "^1.29.0",
-    "react-simple-code-editor": "^0.13.1"
+    "react-simple-code-editor": "^0.13.1",
+    "react-split-pane": "^0.1.92",
+    "styled-components": "^6.1.1"
   },
   "browserslist": {
     "production": [
